# 18d-BalancingWithCOMError

./: CMakeLists.txt  Controller.cpp  Controller.hpp  Main.cpp  MyWindow.cpp  MyWindow.hpp  README.md  defaultInit.txt  lqr.cpp  lqr.hpp
results/: output_with_adrc.csv  output_without_adrc.csv  plot_results.m
